# fastq_compress

./: .gitignore  pyproject.toml
src/fastq_compress/: __init__.py  coding.py  compressor.py  fastq.py  notes.py
tests/: test_coding.py  test_compressor.py  test_iterate_fastq.py
