[project]
name = "fastq-compress"
description = "FASTQ file compressor"
readme = "README.md"
authors = [
    { name = "Jose Blanca", email = "jblanca@upv.es" }
]
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.7.0",
]
# We're setting the version using hatch-vcs
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "pytest>=8.3.5",
]
